# dataflex

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: clean_project_setup.md  phase1.md  software_specification_document.md  to_do_list.md
